--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@ title: Nous Contacter
 name: contact
 permalink: /contact/
 ---
+<h1>Nous Contacter:</h1>
 <form action="//formspree.io/email@domain.com" method="POST">
  <fieldset>
  <label for="name">Votre Nom</label><br>
